@@ -1,7 +1,9 @@
 
 Version 1.3  2008-08-03
-  * memset response header to 0 to support java client
-  * add group_name to upload file response package
+  * fix bug: when meta data is empty, get meta data return error
+  * support java client
+    # memset response header to 0
+    # add group_name to upload file response package
 
 Version 1.2  2008-07-27
   * add client function storage_set_metadata to support setting metadata(overwrite or merge)
